--- a/data_skripsi.tex
+++ b/data_skripsi.tex
@@ -14,4 +14,4 @@
 \filekatapengantar{kata_pengantar.tex}
 
 % kata kunci untuk di halaman abstrak
-\katakunci{katakunci1, katakunci2, katakunci3}
+\katakunci{Wawasan Nusantara, Indonesia, Persatuan dan Kesatuan}
