--- a/muka_skripsi.tex
+++ b/muka_skripsi.tex
@@ -1,9 +1,8 @@
 \coverbaru
 \abstrak
-\katapengantar
+% \katapengantar
 \daftarisi
-\daftartabel
-\daftargambar
-\daftarlampiran
+% \daftargambar
+% \daftarlampiran
 
 \selectlanguage{bahasa}\clearpage\pagenumbering{arabic}\setcounter{page}{1}
