--- a/bab-1-skripsi.tex
+++ b/bab-1-skripsi.tex
@@ -1,24 +1,24 @@
-\chapter{PENDAHULUAN}
-\section{Latar Belakang}
+% \chapter{PENDAHULUAN}
+\section{Pendahuluan}
 Wawasan Nusantara adalah konsep dasar yang memandang pentingnya pemahaman dan kesadaran terhadap keberagaman budaya, geografi, serta sumber daya alam yang melimpah di wilayah Indonesia yang luas, dikenal sebagai Nusantara. Konsep ini mendorong negara dan masyarakat Indonesia untuk menjaga kesatuan, kedaulatan, serta integritas wilayah, sekaligus menjalin hubungan harmonis dengan negara-negara tetangga di kawasan ini. Wawasan Nusantara bukan hanya menjadi landasan kebijakan luar negeri Indonesia, melainkan juga menjadi visi utama pembangunan nasional.
 
 Pemahaman konsep Wawasan Nusantara membantu kita untuk menjaga persatuan dan kedaulatan Indonesia sebagai negara kepulauan yang unik dengan ribuan pulau. Hal ini memperkuat rasa nasionalisme, menghormati keragaman budaya, serta mempromosikan kerja sama antar-masyarakat di berbagai daerah. Wawasan Nusantara juga mendorong pemanfaatan sumber daya alam secara berkelanjutan dan pelestarian lingkungan, yang menjadi relevan dalam era pelestarian alam saat ini. Konsep ini membantu kita dalam mendukung kebijakan pemerintah dan membentuk identitas bangsa Indonesia yang kuat, yang mencakup warisan budaya, kelestarian lingkungan, serta sumber daya yang dimiliki oleh Indonesia.
 
 Namun, masih banyak orang yang belum terlalu memahami apa itu Wawasan Nusantara sehingga mereka belum mengenal Indonesia secara lebih dekat. Gagasan ini mencerminkan tantangan yang muncul dalam upaya mempromosikan pemahaman dan kesadaran terhadap konsep Wawasan Nusantara di kalangan masyarakat, yang pada gilirannya dapat menghambat pencapaian tujuan kesatuan, kedaulatan, dan pembangunan nasional yang diamanatkan oleh konsep tersebut.
 
-\section{Rumusan Masalah}
-\begin{enumerate}
-\item Bagaimana konsep Wawasan Nusantara dapat dijelaskan sebagai sarana untuk lebih mengenal Indonesia ?
-\item Apa saja hambatan dan tantangan yang muncul dalam upaya mempromosikan pemahaman terhadap konsep Wawasan Nusantara di kalangan masyarakat?
-\item Bagaimana pemahaman yang lebih baik terhadap Wawasan Nusantara dapat berkontribusi pada pencapaian tujuan kesatuan, kedaulatan, dan pembangunan Indonesia?
-\end{enumerate}
-
-\section{Tujuan Artikel}
-\begin{enumerate}
-\item Menguraikan konsep Wawasan Nusantara secara komprehensif sebagai sarana untuk lebih memahami Indonesia, termasuk aspek-aspek budaya, geografi, dan sumber daya alam yang memengaruhi identitas dan perkembangan negara ini.
-\item Menganalisis hambatan dan tantangan yang dihadapi dalam upaya mempromosikan pemahaman terhadap konsep Wawasan Nusantara di kalangan masyarakat, serta menyajikan solusi atau rekomendasi untuk mengatasi hambatan tersebut.
-\item Menjelaskan bagaimana pemahaman yang lebih baik terhadap Wawasan Nusantara dapat berdampak positif pada pencapaian tujuan kesatuan, kedaulatan, dan pembangunan nasional Indonesia, dengan merinci manfaat yang dapat diperoleh baik dari perspektif individu maupun negara.
-\end{enumerate}
+% \section{Rumusan Masalah}
+% \begin{enumerate}
+% \item Bagaimana konsep Wawasan Nusantara dapat dijelaskan sebagai sarana untuk lebih mengenal Indonesia ?
+% \item Apa saja hambatan dan tantangan yang muncul dalam upaya mempromosikan pemahaman terhadap konsep Wawasan Nusantara di kalangan masyarakat?
+% \item Bagaimana pemahaman yang lebih baik terhadap Wawasan Nusantara dapat berkontribusi pada pencapaian tujuan kesatuan, kedaulatan, dan pembangunan Indonesia?
+% \end{enumerate}
+%
+% \section{Tujuan Artikel}
+% \begin{enumerate}
+% \item Menguraikan konsep Wawasan Nusantara secara komprehensif sebagai sarana untuk lebih memahami Indonesia, termasuk aspek-aspek budaya, geografi, dan sumber daya alam yang memengaruhi identitas dan perkembangan negara ini.
+% \item Menganalisis hambatan dan tantangan yang dihadapi dalam upaya mempromosikan pemahaman terhadap konsep Wawasan Nusantara di kalangan masyarakat, serta menyajikan solusi atau rekomendasi untuk mengatasi hambatan tersebut.
+% \item Menjelaskan bagaimana pemahaman yang lebih baik terhadap Wawasan Nusantara dapat berdampak positif pada pencapaian tujuan kesatuan, kedaulatan, dan pembangunan nasional Indonesia, dengan merinci manfaat yang dapat diperoleh baik dari perspektif individu maupun negara.
+% \end{enumerate}
 
 % \section{Manfaat Artikel}
 % \begin{enumerate}
