--- a/skripsi_uinws.tex
+++ b/skripsi_uinws.tex
@@ -8,10 +8,10 @@
 \input{bab-1-skripsi.tex}
 \input{bab-2-skripsi.tex}
 \input{bab-3-skripsi.tex}
-\input{bab-4-skripsi.tex}
+% \input{bab-4-skripsi.tex}
 \daftarpustaka
-\lampiran
-\input{lampiran-1.tex}
-\input{lampiran-2.tex}
+% \lampiran
+% \input{lampiran-1.tex}
+% \input{lampiran-2.tex}
 
 \end{document}
