--- a/bab-1-skripsi.tex
+++ b/bab-1-skripsi.tex
@@ -1,28 +1,25 @@
-% \chapter{PENDAHULUAN}
-\section{Pendahuluan}
+\chapter{Pendahuluan}
+
+\section{Latar Belakang}
 Wawasan Nusantara adalah konsep dasar yang memandang pentingnya pemahaman dan kesadaran terhadap keberagaman budaya, geografi, serta sumber daya alam yang melimpah di wilayah Indonesia yang luas, dikenal sebagai Nusantara. Konsep ini mendorong negara dan masyarakat Indonesia untuk menjaga kesatuan, kedaulatan, serta integritas wilayah, sekaligus menjalin hubungan harmonis dengan negara-negara tetangga di kawasan ini. Wawasan Nusantara bukan hanya menjadi landasan kebijakan luar negeri Indonesia, melainkan juga menjadi visi utama pembangunan nasional.
 
 Pemahaman konsep Wawasan Nusantara membantu kita untuk menjaga persatuan dan kedaulatan Indonesia sebagai negara kepulauan yang unik dengan ribuan pulau. Hal ini memperkuat rasa nasionalisme, menghormati keragaman budaya, serta mempromosikan kerja sama antar-masyarakat di berbagai daerah. Wawasan Nusantara juga mendorong pemanfaatan sumber daya alam secara berkelanjutan dan pelestarian lingkungan, yang menjadi relevan dalam era pelestarian alam saat ini. Konsep ini membantu kita dalam mendukung kebijakan pemerintah dan membentuk identitas bangsa Indonesia yang kuat, yang mencakup warisan budaya, kelestarian lingkungan, serta sumber daya yang dimiliki oleh Indonesia.
 
 Namun, masih banyak orang yang belum terlalu memahami apa itu Wawasan Nusantara sehingga mereka belum mengenal Indonesia secara lebih dekat. Gagasan ini mencerminkan tantangan yang muncul dalam upaya mempromosikan pemahaman dan kesadaran terhadap konsep Wawasan Nusantara di kalangan masyarakat, yang pada gilirannya dapat menghambat pencapaian tujuan kesatuan, kedaulatan, dan pembangunan nasional yang diamanatkan oleh konsep tersebut.
 
-% \section{Rumusan Masalah}
-% \begin{enumerate}
-% \item Bagaimana konsep Wawasan Nusantara dapat dijelaskan sebagai sarana untuk lebih mengenal Indonesia ?
-% \item Apa saja hambatan dan tantangan yang muncul dalam upaya mempromosikan pemahaman terhadap konsep Wawasan Nusantara di kalangan masyarakat?
-% \item Bagaimana pemahaman yang lebih baik terhadap Wawasan Nusantara dapat berkontribusi pada pencapaian tujuan kesatuan, kedaulatan, dan pembangunan Indonesia?
-% \end{enumerate}
-%
-% \section{Tujuan Artikel}
-% \begin{enumerate}
-% \item Menguraikan konsep Wawasan Nusantara secara komprehensif sebagai sarana untuk lebih memahami Indonesia, termasuk aspek-aspek budaya, geografi, dan sumber daya alam yang memengaruhi identitas dan perkembangan negara ini.
-% \item Menganalisis hambatan dan tantangan yang dihadapi dalam upaya mempromosikan pemahaman terhadap konsep Wawasan Nusantara di kalangan masyarakat, serta menyajikan solusi atau rekomendasi untuk mengatasi hambatan tersebut.
-% \item Menjelaskan bagaimana pemahaman yang lebih baik terhadap Wawasan Nusantara dapat berdampak positif pada pencapaian tujuan kesatuan, kedaulatan, dan pembangunan nasional Indonesia, dengan merinci manfaat yang dapat diperoleh baik dari perspektif individu maupun negara.
-% \end{enumerate}
+\section{Tinjauan Pustaka}
+Wawasan Nusantara adalah cara pandang suatu bangsa tentang diri dan lingkungannya yang
+dijabarkan dari dasar falsafah dan sejarah bangsa itu sesuai dengan posisi dan kondisi geografi
+negaranya untuk mencapai tujuan atau cita-cita nasionalnya. Ada beberapa pengertian
+wawasan nusantara, diantaranya sebagai berikut :
 
-% \section{Manfaat Artikel}
-% \begin{enumerate}
-% \item manfaat 1
-% \item manfaat 2
-% \item manfaat 3
-% \end{enumerate}
+\begin{enumerate}
+
+  \item Pengertian Wawasan Nusantara berdasarkan ketetepan MPR Tahun 1993 dan 1998 tentang GBHN adalah sebagai berikut: \textit{"Wawasan Nusantara yang merupakan wawasan nasional yang bersumber pada Pancasila dan berdasarkan UUD 1945 adalah cara pandang dan sikap bangsa Indonesia mengenai diri dan lingkungannya dengan mengutamakan persatuan dan kesatuan bangsa serta kesatuan wilayah dalam menyelenggarakan kehidupan bermasyarakat, berbangsa dan bernegara untuk mencapai tujuan nasional."}
+  
+  \item Pengertian Wawasan Nusantara menurut Prof. DR. Wan Usman (Ketua Program S-2 PKN UI): \textit{"Wawasan Nusantara adalah cara pandang bangsa Indonesia mengenai diri dan tanah airnya sebagai negara kepulauan dengan semua aspek kehidupan yang beragam"}
+
+  \item Wawasan Nusantara menurut M. Panggabean (1947 : 349), adalah doktrin politik Indonesia yang bertujuan melindungi Republik Indonesia, berdasarkan Pancasila dan UUD 1945, dengan mempertimbangkan faktor geografis, ekonomi, demografi, teknologi, dan kemungkinan strategis. Ini bisa diartikan sebagai geopolitik Indonesia dan mencakup lima aspek, yaitu kesatuan wilayah, bangsa, ekonomi, budaya, dan pertahanan, baik secara internal maupun eksternal.
+
+  
+\end{enumerate}
