--- a/pustaka.tex
+++ b/pustaka.tex
@@ -1,2 +1,7 @@
 \bibitem[(Roni Lukum, 2002)]{ronilukum2013}Lukum, R. 2013. \textit{Upaya Peningkatan Pemahaman Wawasan Nusantara Sebagai Sarana dalam Meningkatkan Semangat Nasionalisme Bagi Warga Negara Indonesia.}. ARTIKEL. 2013 Mar 8;1(77).
 
+\bibitem[(Aminullah, R. and Umam, M., 2020)]{aminullah}Aminullah, R. and Umam, M., 2020. \textit{Pancasila Sebagai Wawasan Nusantara}. Jurnal Al-Allam, 1(1), pp.1-16.
+
+\bibitem[(Kusrahmadi S.D., 2017)]{Kusrahmadi2017}Kusrahmadi, S.D. and Th, T., 2017. \textit{Pentingnya Wawasan Nusantara dan Integrasi Nasional.}.
+
+
