--- a/skripsi_uinws.tex
+++ b/skripsi_uinws.tex
@@ -6,6 +6,7 @@
 
 \input{muka_skripsi.tex}
 \input{bab-1-skripsi.tex}
+\input{kajian-pustaka.tex}
 \input{bab-2-skripsi.tex}
 \input{bab-3-skripsi.tex}
 % \input{bab-4-skripsi.tex}
