--- a/uinwsskripsi.cls
+++ b/uinwsskripsi.cls
@@ -88,7 +88,7 @@
 %------------------------------------------------------------
 %The form of page numbering
 %------------------------------------------------------------
-\pagestyle{myheadings}
+\pagestyle{chapterheading}
 \markright{}
 
 %------------------------------------------------------------
